--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title></title>
   <style type="text/css">code{white-space: pre;}</style>
 </head>
-<body>
-<h1 id="learn-.py-thon">Learn .py-thon</h1>
+<body style="font:Calibri">
+<h1 id="learn-.py-thon" align="center">Learn .py-thon</h1>
 <h2 id="course-outline">Course Outline:</h2>
 <p>Python is an open source programming language with one of the largest developer community. Python is being embraced by increasing number of developers from the fields of Science, Research, Machine Learning Engineers and so on, including kids from schools &amp; this should be enough to understand the availability of diverse libraries and the ease of learning the language.</p>
 <h2 id="the-language.itself">The Language.itself():</h2>
