--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Python Course Outline</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <style type="text/css">
-  code{white-space: pre;}
+  code{white-space: pre; color: #777}
 
   body{font:"Calibri";}
 
